tests/suites/0_stateless/18_rbac/18_0012_temp_table.result
>>>> drop user if exists 'owner'
>>>> drop role if exists role1
>>>> create user 'owner' IDENTIFIED BY 'password' with DEFAULT_ROLE='role1'
>>>> create role role1
>>>> create or replace database test
>>>> grant role role1 to owner
mysql: [Warning] Using a password on the command line interface can be insecure.
ERROR 1105 (HY000) at line 1: PermissionDenied. Code: 1063, Text = Permission denied: privilege [Create] is required on 'default'.'test'.* for user 'owner'@'%' with roles [role1]. Note: Please ensure that your current role have the appropriate permissions to create a new Warehouse|Database|Table|UDF|Stage..
mysql: [Warning] Using a password on the command line interface can be insecure.
2
1
2
1
2
1
3
3
3	NULL
1
2
1
mysql: [Warning] Using a password on the command line interface can be insecure.
ERROR 1105 (HY000) at line 1: UnknownTable. Code: 1025, Text = error: 
  --> SQL:1:15
  |
1 | select * from test.t2
  |               ^^^^^^^ Unknown table "default".test.t2 .

.
